# fastrtps_serial

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh
include/: HelloWorld.h  HelloWorldPublisher.h  HelloWorldSubscriber.h
lib/serial/: serial.h  unix.cc
lib/test/: test.h
src/: HelloWorld.cxx  HelloWorldPubSubMain.cxx  HelloWorldPublisher.cxx  HelloWorldSubscriber.cxx
testserial/: platformio.ini
testserial/src/: test.ino
